Updated UDF code, fixed config.ini, Excel integration fixes

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,4 @@
 [database]
-# path can be relative or absolute
 sqlite_path = sectoral_ebitda_margins.db
 table_name = sectoral_ebitda_margins
-date_format = %Y-%m-%d
+date_format = %%Y-%%m-%%
